2013-03-08  Albert Chu <chu11@llnl.gov>

	* man/ipmi-sensors.8.pre.in: Fix typo (Found by Werner Fischer).
	
2013-02-28  Anonymous <anonymous@anonymous.com>

	* libfreeipmi/sel/ipmi-sel-string-intel.c (sel_string_output_intel_event_data2_event_data3):
	Fix string overflow.

2013-02-26  Albert Chu <chu11@llnl.gov>

        * NEWS, configure.ac: Update for release.

        * Tagged Release-1_2_5.

2013-02-21  Albert Chu <chu11@llnl.gov>

	* Add support for Supermicro X9SPU-F-0 OEM sensors/events.

	* Add support for Supermicro X9DRI-LN4F+ OEM
	interpretations (forgotten earlier).
	
2013-01-22  Albert Chu <chu11@llnl.gov>

	* bmc-config/bmc-config.c (_bmc_config),
	ipmi-pef-config/ipmi-pef-config.c (_ipmi_pef_config),
	ipmi-chassis-config/ipmi-chassis-config.c (_ipmi_chassis_config),
	ipmi-sensors-config/ipmi-sensors-config.c (_ipmi_sensors_config):
	If only non-fatal errors occurred during operation, exit with
	status 1.  Exit with status 2 on fatal errors.

	* man/manpage-common-config-diagnostics.man: New file.

	* man/bmc-config.8.pre.in, man/ipmi-sensors-config.8.pre.in,
	man/ipmi-chassis-config.8.pre.in, man/ipmi-pef-config.8.pre.in:
	Update for changes in exit value behavior.
	
2013-01-22  Albert Chu <chu11@llnl.gov>

	* man/manpage-common-config-tool-options.man: Add clarification
	about use w/ hostranges and hostrange options.
	
2013-01-22  Albert Chu <chu11@llnl.gov>

	* common/toolcommon/pstdout.h,
	common/toolcommon/pstdout.c (pstdout_vprintf, pstdout_vfprintf):
	New functions.

	* common/configtool/config-tool-utils.h,
	common/configtool/config-tool-utils.c (config_pstdout_fprintf):
	New function.

	* common/configtool/config-tool-checkout.c,
	common/configtool/config-tool-comment.c: Call
	config_pstdout_fprintf instead of pstdout_fprintf to deal with
	corner case when user specifys filename with --filename option in
	config tools.
	
2013-01-10  Albert Chu <chu11@llnl.gov>

        * NEWS, configure.ac: Update for release.
